samples/_failures_safe/1761613186_bfd392_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5a581077.c: In function ‘main’:
./samples/SAFE/__tmp_5a581077.c:209:25: error: missing terminating " character
  209 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_5a581077.c:209:9: error: expected expression at end of input
  209 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_5a581077.c:209:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5a581077.c:209:9: error: expected declaration or statement at end of input
